tests/ui/too_many_optionals.stderr
error: too many optional arguments
  --> tests/ui/too_many_optionals.rs:23:5
   |
23 |     sset!(pico, (0,0), 1u8, 2usize, 3usize).unwrap();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::__tail_omittable_munch` which comes from the expansion of the macro `sset` (in Nightly builds, run with -Z macro-backtrace for more info)
